--- a/.env
+++ b/.env
@@ -1,1 +1,10 @@
 PORT=5000
+
+
+#Database Config
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=realtime_db
+DB_USERNAME=root
+DB_PASS=
