--- a/.env
+++ b/.env
@@ -5,6 +5,6 @@ PORT=5000
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=realtime_db
+DB_DATABASE=analytica
 DB_USERNAME=root
 DB_PASS=
