--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.15.2",
     "mysql": "^2.18.1",
-    "socket.io": "^3.0.3"
+    "socket.io": "^3.0.3",
+    "url": "^0.11.0"
   }
 }
